# verkle-tree

./: Cargo.toml  Old pices of code.md  README.md  test_compare  test_compare_point
pointproofs/: Cargo.toml
pointproofs/src/pairings/: param.rs  prove.rs
src/: lib.rs  main.rs  verkle_tree.rs  verkle_tree_point.rs  verkle_tree_test.rs
