[package]
name = "verkle-tree"
version = "0.1.0"
edition = "2021"
authors = ["CleanPegasus <me@cleanpegasus.dev>"]
description = "A Rust implementation of Verkle Trees, a powerful upgrade to Merkle Trees that offers improved efficiency and reduced proof sizes. This crate provides a robust, performant, and easy-to-use library for creating, manipulating, and verifying Verkle Trees."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "=0.4.2"
ark-test-curves = "0.4.2"
ark-std = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-poly = "0.4.2"
ark-ec = "0.4.2"
rand = "0.8.5"
kzg-commitment = "0.1.3"
num-bigint = "0.4.6"
recursive = "0.1.1"
random-number = "0.1.9"
rayon = "1.10.0"
pointproofs = { path = "/Users/tokoster/Documents/pointproofs"}
pairing-plus = { git = "https://github.com/algorand/pairing-plus", branch = "master" }
